syntax = "proto3";

option go_package="./users";

message User {
    int64 id = 1;
    string fname = 2;
    string city = 3;
    int32 phone = 4;
    float height = 5;
    bool Married = 6;
}

message UserDetailRequest {
    int64 id = 1;
}

message UserDetailResponse {
    repeated User users = 1;
}

message ListOfUserDetailsRequest {
    repeated int64 id = 1;
}

service ServiceName {
    // rpc GetUserDetails (UserDetailRequest) returns (stream User);
    rpc GetUsers (UserDetailRequest) returns (UserDetailResponse);
}